--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-validator": "^0.14.1",
     "joi": "^17.13.3",
     "mysql2": "^3.14.0",
+    "nodemailer": "^7.0.3",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
