--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@types/nodemailer": "^6.4.17",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "docxtemplater": "^3.63.2",
     "joi": "^17.13.3",
     "mysql2": "^3.14.0",
     "nodemailer": "^7.0.3",
     "pg": "^8.14.1",
+    "pizzip": "^3.2.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.22"
